apps/monitoring/vmalert/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "vmalert"
  namespace: "monitoring"
spec:
  selector:
    app: "vmalert"
  ports:
    - port: 80
      targetPort: "vmalert"
