apps/monitoring/vmalert/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vmalert
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: vmalert
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: metrics
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
